[gd_scene load_steps=33 format=2]

[ext_resource path="res://graphics/chosen_struggle.png" type="Texture" id=1]
[ext_resource path="res://graphics/chosen_paralyzed.png" type="Texture" id=2]
[ext_resource path="res://graphics/chosen_accept.png" type="Texture" id=3]
[ext_resource path="res://graphics/chosen_idle.png" type="Texture" id=4]
[ext_resource path="res://graphics/chosen_legs.png" type="Texture" id=5]
[ext_resource path="res://graphics/chosen_torso.png" type="Texture" id=6]
[ext_resource path="res://scripts/Chosen.gd" type="Script" id=7]
[ext_resource path="res://scenes/Haloop.tscn" type="PackedScene" id=8]
[ext_resource path="res://scripts/Hula.gd" type="Script" id=9]
[ext_resource path="res://graphics/chosen_exhaust.png" type="Texture" id=10]
[ext_resource path="res://graphics/chosen_catch.png" type="Texture" id=11]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 10 )
region = Rect2( 48, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 11 )
region = Rect2( 48, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 11 )
region = Rect2( 96, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 11 )
region = Rect2( 144, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 48, 32 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 2.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "smited",
"speed": 16.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "accept",
"speed": 4.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "exhausted",
"speed": 4.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": false,
"name": "catch",
"speed": 8.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "struggle",
"speed": 4.0
} ]

[sub_resource type="CircleShape2D" id=16]
radius = 2.0

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 8, 8 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 5 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=21]
animations = [ {
"frames": [ SubResource( 18 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "moving",
"speed": 4.0
} ]

[node name="Chosen" type="Node2D"]
position = Vector2( 107.181, 99.068 )
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="Graphics" type="Node2D" parent="."]

[node name="Head" type="AnimatedSprite" parent="Graphics"]
position = Vector2( 0, -8 )
z_index = 1
frames = SubResource( 15 )
animation = "idle"
playing = true

[node name="Area2D" type="Area2D" parent="Graphics/Head"]
position = Vector2( 0, -16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Graphics/Head/Area2D"]
shape = SubResource( 16 )

[node name="Torso" type="Sprite" parent="Graphics"]
position = Vector2( 0, -4 )
scale = Vector2( 1, 0.5 )
texture = ExtResource( 6 )
vframes = 3

[node name="Area2D" type="Area2D" parent="Graphics/Torso"]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Graphics/Torso/Area2D"]
shape = SubResource( 17 )

[node name="Legs" type="AnimatedSprite" parent="Graphics"]
position = Vector2( 0, 8 )
frames = SubResource( 21 )
animation = "idle"
playing = true

[node name="Timers" type="Node2D" parent="."]

[node name="Exhaust" type="Timer" parent="Timers"]
one_shot = true

[node name="Smited" type="Timer" parent="Timers"]
one_shot = true

[node name="Struggle" type="Timer" parent="Timers"]
one_shot = true

[node name="Hula" type="Node2D" parent="."]
script = ExtResource( 9 )

[node name="Haloop" parent="Hula" instance=ExtResource( 8 )]
position = Vector2( 0, -8 )
momentum = 0.75
decay_rate = 0.0
[connection signal="area_entered" from="Graphics/Torso/Area2D" to="." method="_smited"]
[connection signal="timeout" from="Timers/Exhaust" to="." method="_exit_exhausted"]
[connection signal="timeout" from="Timers/Smited" to="." method="_exit_smited"]
[connection signal="timeout" from="Timers/Struggle" to="." method="_exit_struggle"]
